# wheel-stub

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  whlnext_project_management.yml
demo/: pyproject.toml
requirements/: requirements-lock.txt  requirements-types-lock.txt
src/wheel_stub/: ERROR.txt  __about__.py  buildapi.py  common.py  error.py  sdist.py  wheel.py
src/wheel_stub/_vendor/: README.md
tests/: conftest.py  docker-compose.yml  test_sdist.py  test_util.py  test_wheel.py
tests/invalid_files/: nvidia_cuda_runtime_cu12-12.1.105-py3-none-manylinux1_x86_64.whl
tests/pypi_simple/root/: index.html
tests/pypi_simple/root/nvidia-cuda-runtime-cu12/: index.html
tests/pypi_simple/root/nx-cugraph-cu11/: index.html
tests/stub_pypi_simple/root/nvidia-cuda-runtime-cu12/: index.html  nvidia_cuda_runtime_cu12-12.3.52-py3-none-manylinux1_x86_64.whl  nvidia_cuda_runtime_cu12-12.3.52-py3-none-win_amd64.whl  nvidia_cuda_runtime_cu12-12.4.99-py3-none-manylinux2014_x86_64.whl  nvidia_cuda_runtime_cu12-12.4.99-py3-none-win_amd64.whl
tests/stub_pypi_simple/root/nx-cugraph-cu11/: index.html  nx_cugraph_cu11-23.10.0-py3-none-any.whl  nx_cugraph_cu11-23.12.0-py3-none-any.whl  nx_cugraph_cu11-24.2.0-py3-none-any.whl
tests/templates/: default.conf
